--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
 }
 
 #titulo{
-    font-family: cursive, sans-serif;
+    font-family:'Times New Roman', Times, serif;
     color: #201f1b;
     display: inline-block;
     padding-left: 25px;
