--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
 }
 
 #titulo{
-    font-family:'Times New Roman', Times, serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: #201f1b;
     display: inline-block;
     padding-left: 25px;
